# topobathysim

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  DATA_SOURCES.md  README.md  environment.yml  pyproject.toml
docs/source/: api.rst  conf.py  data_sources.rst  index.rst  methodology.rst
service/: Dockerfile  pyproject.toml  run_server.py  verify_bathy.py
service/app/: main.py  models.py
service/static/: index.html
service/tests/: test_api_integration.py
service/topobathyserve/: main.py
src/topobathysim/: __init__.py  bluetopo.py  fusion.py  gebco.py  gebco_2025.py  land.py  lidar.py  manager.py  manifest.py  ncei_bag.py  ncei_cudem.py  noaa_bluetopo.py  noaa_topobathy.py  quality.py  usgs_3dep.py  usgs_lidar.py  vdatum.py
src/topobathysim/scripts/: prime_cache.py  verify_cache.py
tests/: test_fusion_quality.py  test_fusion_seamline.py  test_gebco.py  test_integration.py  test_lidar_ept.py  test_manager.py
tests/integration/: conftest.py  test_fusion_quality.py  test_integration.py  test_lidar_ept.py  test_scenarios.py
tests/unit/: repro_reproject.py  test_contours.py  test_cudem_fusion.py  test_cudem_fusion_debug.py  test_gebco.py  test_manager.py  test_quality.py  test_raster_ops.py  verify_manager_logic.py
